--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "music-library",
   "version": "0.1.0",
   "private": true,
-  "engines": { "node": "16.14.0" },
+  "engines": {
+    "node": "16.14.0"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-<<<<<<< HEAD
     "axios": "^0.27.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
@@ -15,10 +16,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
-=======
-    "react": "^0.0.0-experimental-796d31809-20220812",
-    "react-dom": "^0.0.0-experimental-796d31809-20220812",
->>>>>>> withSuspense
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
